--- a/styles/gym.css
+++ b/styles/gym.css
@@ -276,7 +276,6 @@ header
     display: inline-block;
     font-size: 13px;
     padding: 11px 17px;
-    background-color: #637496;
     color: #fff;
     text-align: center;
     font-weight: 400;
@@ -640,10 +639,10 @@ h1{
 
 .about-img{
     margin-left: 15px;
-    margin-bottom: 0%;
+    
 }
 .about-img img{
-    width: 450px;
+    width: 300px;
     height: 210px; 
     
 }
@@ -735,6 +734,10 @@ footer {
     margin-right: 35px;
 }
 
+.spa-header h1{
+  text-align: center;
+}
+
 .spa-text em{
     font-size: large;
 }
@@ -798,10 +801,120 @@ transition: all 150ms ease;
   background-color: rgba(0, 0, 0, 0.5);
   text-shadow: 0;
 }
+
+#signup_header {
+  margin-top: 100px;
+  position: relative;
+  margin-left: 350px;
+  margin-right: 350px;
+  overflow: hidden;
+  padding: 50px;
+  border-radius: 15px;
+}
+.img1{
+  opacity: 0.8;
+  position:absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  place-items: center;
+}
+
+#signup_form {
+  position: relative;
+}
+
+tr {
+  height:55px
+  
+}
+
+th {
+font-size: 125%;
+font-family: 'Roboto' , sans-serif;
+font-weight:500;
+color: white;
+width: 135px;
+}
+
+td {
+  font-size: 120%;
+  font-family: 'Roboto' , sans-serif;
+  font-weight: 600;
+  color: white;
+  margin-left: 10px;
+}
+
+#table3 {
+  width: 90%;
+  margin:0 auto;
+  text-align: center;
+}
+
+input::placeholder {
+  font-size: 80%;
+  font-family: sans-serif;
+  font-weight: 500;
+  font-style: italic;
+  color: #2e3f61;
+  padding-left: 20px;
+
+}
+
+input.signup6 {
+  width: 200px;
+  border-radius: 5px;
+  padding-left: 10px;
+  outline: none;
+  border: none;
+  font-size: 80%;
+  font-weight: 300;
+  font-family: sans-serif;
+  color: #2e3f61;
+  cursor: pointer;
+}
+
+input.signup7 {
+  border-radius: 10px;
+  padding: 10px;
+  outline: none;
+  border: none;
+  font-size: 90%;
+  font-family: sans-serif;
+  font-weight: 600;
+  color: white;
+  background-color: #2e3f61;
+  cursor: pointer;
+}
+
+.gend{
+  margin-left: 20px;
+
+}
+
+select{
+  margin-left: 30px;
+  font-family: 'Times New Roman', Times, serif;
+  border: 0;
+  outline-style: none;
+  box-sizing:border-box;
+}
+
+.gymselect{
+  width: 120px;
+  height: 20px;
+  border: 0;
+  outline: 0;
+  font-size: 15px;
+  font-family: sans-serif
+}
+
 h3{
     margin-top: 50px;
     margin-bottom: 35px;
     margin-left: 15px;
+    text-align: center;
     font-family:'Times New Roman', Times, serif;
     font-weight: lighter;
     color: #637496;
@@ -809,4 +922,5 @@ h3{
 
 .fees{
     margin-left: 15px;
+    text-align: center;
 }
